--- a/Burger-King-Franchise/style.css
+++ b/Burger-King-Franchise/style.css
@@ -133,7 +133,7 @@ span a:hover {
   font-size: 2rem;
 }
 main {
-  background-image: url(./Assets/bg-2.jpg);
+  background-image: url(https://github.com/Mayankkatheriya/BurgerKing_franchise/blob/main/Assets/bg-2.jpg?raw=true);
   background-position: center 30%;
   background-repeat: no-repeat;
   background-size: cover;
