--- a/Google pay replicate/style.css
+++ b/Google pay replicate/style.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #72d2ff;
-  background-image: url(https://github.com/Mayankkatheriya/Google_pay_Payment/blob/main/bgimage1.jpg?raw=true);
+  background-image: url(https://media.istockphoto.com/id/1420039843/photo/cloud-computing-backup-cyber-security-fingerprint-identity-encryption-technology.jpg?s=2048x2048&w=is&k=20&c=GFD9OS1LFOvjEyqPvXCA_ueQxSQSBMilnF-zZpPG4IQ=);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
