--- a/stopWatch/style.css
+++ b/stopWatch/style.css
@@ -7,7 +7,7 @@ body {
     min-height: 100vh;
     overflow: hidden;
     align-items: center;
-    background-image: url(https://media.istockphoto.com/id/1337281730/photo/11-o-clock-am-pm-backlit-purple-clock-time.jpg?s=612x612&w=0&k=20&c=hYcQdLyavRvoYj-qcK_lO0qcEp4JH2hicA2C5VUBOa8=);
+    background-image:linear-gradient(pink,blue);
     background-size: cover;
 }
 .timerDisplay {
@@ -35,17 +35,4 @@ button {
     cursor: pointer;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     transition: all 0.2s;
-}
-button[disabled] {
-    opacity: 0.5;
-    cursor: default;
-}
-#lapTimes {
-    font-size: 1.5rem;
-    text-align: center;
-    margin-top: 20px;
-}
-
-button#lap {
-    background-color: #4caf50;
 }
